MOAR PermGen!
and a fix to how we are specifying :jvm-opts